--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,8 +11,9 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 _"All you can Eat"_ Plans
 
-We keep life simple: Gigapipe plans are _cost-locked_ and usage is unmetered.<br/>
-The only limitation are your plan's resources _(storage/cpu/etc) ♮_
+We keep life simple: Gigapipe plans are _fixed-cost and usage is _unmetered_<br/>
+
+♻️ The only limitation are your plan's resources _(storage/cpu/etc)_
 
 <PricingCalculator />
 
@@ -22,10 +23,10 @@ The only limitation are your plan's resources _(storage/cpu/etc) ♮_
 
 - ⚡ **Unmetered** ingestion for _Logs, Metrics, Traces and Profiles_ 
   - ♻️ data is automatically rotated when free storage is < 90%
-  - ♮ 1TB space w/ 500GB of ingestion/month = 2 months of retention
+  - ♻️ 1TB space w/ 500GB of ingestion/month = 2 months of retention
 - ⚡ **Unlimited** query access to _Logs, Metrics, Traces and Profiles_
   - ♻️ query speed and performance are limited by the node _vCPU/RAM_
-  - ♮ services might degrade when overloaded - _add node(s) or upgrade_
+  - ♻️ services might degrade when overloaded - _add node(s) or upgrade_
 
 #### 🐣 Service Availability
 
