--- a/docs/pricing.mdx
+++ b/docs/pricing.mdx
@@ -11,9 +11,9 @@ import PricingCalculator from '../src/components/pricing/PricingCalculator'
 
 #### 🐣 _"All you can Eat"_ Plans
 
-We keep life simple: Gigapipe plans are _fixed-cost and usage is _unmetered_<br/>
-
-♻️ The only limitation are your plan's resources _(storage/cpu/etc)_
+> [!IMPORTANT]  
+> We keep it simple: Gigapipe plans are _price-locked_ and usage is _unmetered_<br/>
+> The only limitation are your plan's resources _(storage/cpu/ram/etc)_
 
 <PricingCalculator />
 
