--- a/docs/legal/index.mdx
+++ b/docs/legal/index.mdx
@@ -28,7 +28,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 9. Service Level Agreement Credit(s), “SLA Credit(s)”: SLA Credits are governed by these TOS and the SLA Agreement, below. SLA Credits are a service credit that, when applicable, and following an SLA Credit claim, will be issued to your Customer account and may be used to offset future billable services. SLA Credits shall not be issued as cash back to the Customer nor shall the SLA Credits be transferable to other account holders. SLA Credits shall expire when Customer’s account is fully terminated.
 
-10. Cancellation: Because cancellation is automated, Gigapipe requires a written cancellation notice via the Client Area, a minimum of twenty-four (“24”) hours prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date for discontinuance or downgrades of month-to-month services, unless specified otherwise. Failure to supply the requisite twenty-four (“24”) hours written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any server cancellation prior to the minimum deadline will remain online until the automated process reclaims your server on the Anniversary Billing Date. Notice of written cancellation is required through the online Client Area located at https://www.gigapipe.com/manage. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
+10. Cancellation: Because cancellation is automated, Gigapipe requires a written cancellation notice via the Client Area, a minimum of twenty-four (“24”) hours prior to 00:00:01 PST (GMT-8) on the Anniversary Billing Date for discontinuance or downgrades of month-to-month services, unless specified otherwise. Failure to supply the requisite twenty-four (“24”) hours written notice of cancellation will result in a full billable cycle, on all service packages, prior to cancellation. Any server cancellation prior to the minimum deadline will remain online until the automated process reclaims your server on the Anniversary Billing Date. Notice of written cancellation is required through the online Client Area located at https://www.app.<domain>.gigapipe.com/. All Customer data remaining after the cancellation date will be destroyed for security and privacy reasons, unless otherwise required by law.
 
 11. 14 Day Refund Window: Subject to the requirements of Cancelation in these Terms of Service, Gigapipe offers Customers who have purchased a VPS/Cloud Hosting Services package a fourteen (14) day refund window from their date of purchase in which they can cancel their VPS/Cloud Hosting Services package for any reason, at no cost.
 
@@ -36,7 +36,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 
 13. Credits and Discounts Reversals: Should the Customer purchase products and/or services with their Gigapipe Credit and later, following the 14 Day Refund Window, wish to cancel those services, any Gigapipe Credit utilized in that purchase shall not be eligible for reuse. Further, if Gigapipe Credits or any other package discount was offered as an incentive for the entering into of a service agreement, and the associated agreement is canceled by the Customer prior to the end of the billing cycle, any Gigapipe Credits will be removed from that Customer’s account and the discounts applied to that agreement will be reversed or recalculated accordingly.
 
-14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket inside the Client Area located at https://www.gigapipe.com/manage. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
+14. Refunds & Disputes: All other services rendered by Gigapipe are non-refundable. This includes, but is not limited to: setup fees, one time fees, monthly service fees, upgrade fees, additional service fees, administrative fees, and late fees. Customers seeking to resolve billing errors are instructed to open an accounting ticket inside the Client Area located at https://www.app.<domain>.gigapipe.com/. Customer agrees not to chargeback any credit card payments for services rendered. A chargeback of payment for services rendered will result in an additional charge of up to one hundred fifty dollars (“$150”) and will be subject to collection by an authorized collection agency. Customer is responsible for any fees and costs (including, but not limited to, reasonable attorneys’ fees, court costs and collection agency fees) incurred by Gigapipe in enforcing collection.
 
 15. Non-Payment: All payments are due in full on the Anniversary Billing Date. Failure to remit payment for services on the Anniversary Billing Date is a violation of the TOS. Failure to remit payment for five (“5”) consecutive days, including the Anniversary Billing Date, shall result in a termination of public access to Customer services. Customer will, however, be permitted access to data and services through the service network. Failure to remit payment for services within seven (“7”) consecutive days, including the Anniversary Billing Date, shall result in termination of access to the service network and all services shall be reclaimed. A late fee of twenty dollars (“$20”) will be incurred for failure to remit payment for services on or before the monthly Anniversary Billing Date. All Customer data remaining after seven (“7”) days of nonpayment will be destroyed for security and privacy reasons, unless otherwise required by law.
 
@@ -79,7 +79,7 @@ Customer agrees to the following Terms of Service, (“TOS”):
 The Service Level Agreement, “SLA” is incorporated into the TOS and applicable to all services delivered directly to Customers of Gigapipe. The SLA is not applicable to unrelated third parties or third parties lacking privity of contract with Gigapipe. The uptime guarantees and the resulting SLA Credit(s) are applied in monthly terms unless specified otherwise. To ensure that Gigapipe is providing optimal services to its Customers, Gigapipe is required to perform scheduled maintenance, from time to time, on the network, client area, and hardware. Any downtime resulting from any such scheduled maintenance or any event of Force Majeure does not qualify for SLA Credit(s). All SLA guarantees and information listed below are made in good faith and are subject to standard contract remedies. Note: SLA Credits for Hourly Services will be calculated and applied based on the same monthly calculation used for the month-to-month contracts.
 
 1. SLA Credit Claim
-To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www,gigapipe.com/manage within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
+To properly claim an SLA Credit due, the Customer’s master administrative user must open an SLA ticket with the Billing Department located inside the Client Area at https://www.app.<domain>.gigapipe.com/ within seven (“7”) days of the purported outage. Customer must include service type, IP Address, contact information, and full description of the service interruption including logs, if applicable. The SLA claim will be researched by the appropriate Gigapipe department manager and any credit issued will be issued to accounting and the ticket will be updated. SLA Credits are issued as service credits on future billing cycles. SLA Credits shall not be bartered or traded with other Gigapipe customers. Please allow up to fourteen (“14”) days for the process of SLA claims. Customer acknowledges that the maximum amount of SLA Credit that may be used for any particular month cannot exceed the total monthly service fee amount for such month.
 
 2. SLA Claim Fault
 Customers currently in arrears for monthly services do not qualify for SLA claims. Customers who have been in payment arrears three (“3”) or more times in the previous twelve (“12”) months do not qualify for SLA claims. Valid SLA claims will not be credited to the Customer’s accounts until all abuse issues are resolved. Any Customer making false or repetitive claims will incur a one-time charge of fifty dollars (“$50”) per incident for such claims. False or repetitive claims are also a violation of the TOS and may be subject to service suspension. Customers participating in malicious or aggressive Internet activities, thereby causing attacks or counter-attacks, do not qualify for SLA claims and shall be deemed in violation of the AUP.
@@ -92,3 +92,117 @@ Gigapipe guarantees one hundred percent (“100%”) access to the online client
 
 5. Redundant Infrastructure
 Gigapipe guarantees one hundred percent (“100%”) uptime on the power and HVAC services to Customers located in Data Center, subject to the provisions of this SLA. All computer equipment and related services are served by redundant UPS power units with backup onsite diesel generators. Except for service downtimes resulting from Customer’s fault, and provided Customer follows the proper procedures for service credit claims as set forth in this SLA, for each continuous, uninterrupted thirty (“30”) minute interval of power and HVAC service downtime that Customer experiences during an applicable month, Gigapipe agrees to grant to Customer a SLA Credit equal to five percent (“5%”) of the Customer’s monthly service fees for that month. Power and HVAC service downtimes of less than thirty (“30”) continuous, uninterrupted minutes do not qualify for this service credit, and the  Customer cannot combine or augment power and HVAC or other service-related downtimes to satisfy such downtime requirement.
+
+For third party integrations created by QXIP, please find below the user agreement with QXIP BV:
+
+HEPIC CLOUD SERVICES AGREEMENT
+
+
+This HEPIC Cloud Services Agreement (this “Agreement”) is between QXIP BV. (“QXIP” “we,” “us,” or “our”) and (“You”). This Agreement sets forth the terms and conditions that govern orders placed under this Agreement and under which QXIP enables its customer to access and use our cloud technology solutions and the associated services made available by QXIP. 
+
+
+1. USE OF THE SERVICES 
+1.1 We will make the QXIP services listed in Your order (the “Services”) available to You pursuant to this Agreement and Your order. Except as otherwise stated in this Agreement or Your order, You have the non- exclusive, worldwide, limited right to use the Services during the period defined in Your order, unless earlier terminated in accordance with this Agreement or Your order (the “Services Period”), solely for Your internal business operations. You may allow Your Users (as defined below) to use the Services for this purpose, and You are responsible for their compliance with this Agreement and Your order. 
+
+
+2. FEES AND PAYMENT 
+2.1 Unless otherwise agreed in Your order, by subscribing to the Services or electing to utilize a recurring payment plan, You authorizes QXIP to automatically charge Your credit card or bank account on file on a monthly basis, as set forth in Your order, until You terminate this Agreement. You are responsible for providing QXIP with Your most current billing information. Once placed, Your order is non-cancelable and the sums paid nonrefundable, except as provided in this Agreement or Your order. You will pay any sales, value-added or other similar taxes imposed by applicable law that we must pay based on the Services You ordered, except for taxes based on our income. Fees for Services listed in an order are exclusive of taxes and expenses. 
+
+
+3. OWNERSHIP RIGHTS AND RESTRICTIONS 
+3.1 You or Your licensors retain all ownership and intellectual property rights in and to Your Content (as defined below). We or our licensors retain all ownership and intellectual property rights in and to the Services, derivative works thereof, and anything developed or delivered by or on behalf of us under this Agreement. 
+3.2 You may have access to Third Party Content through use of the Services. Unless otherwise stated in Your order, all ownership and intellectual property rights in and to Third Party Content and the use of such content is governed by separate third party terms between You and the third party. 
+3.3 You grant us the right to host, use, process, display and transmit Your Content to provide the Services pursuant to and in accordance with this Agreement and Your order. You have sole responsibility for the accuracy, quality, integrity, legality, reliability, and appropriateness of Your Content, and for obtaining all rights related to Your Content required by QXIP to perform the Services. 
+3.4 You may not, and may not cause or permit others to: (a) modify, make derivative works of, disassemble, decompile, reverse engineer, reproduce, republish, download, or copy any part of the Services (including data structures or similar materials produced by programs); (b) access or use the Services to build or support, directly or indirectly, products or services competitive to QXIP; or (c) license, sell, transfer, assign, distribute, outsource, permit timesharing or service bureau use of, commercially exploit, or make available the Services to any third party except as permitted by this Agreement or Your order. 
+
+
+4. NONDISCLOSURE 
+4.1 By virtue of this Agreement, the parties may disclose to each other information that is confidential (“Confidential Information”). Confidential Information shall be limited to the terms and pricing under this Agreement and Your order, Your Content residing in the Services, and all information clearly identified as confidential at the time of disclosure. 
+4.2 A party’s Confidential Information shall not include information that: (a) is or becomes a part of the public domain through no act or omission of the other party; (b) was in the other party’s lawful possession prior to the disclosure and had not been obtained by the other party either directly or indirectly from the disclosing party; (c) is lawfully disclosed to the other party by a third party without restriction on the disclosure; or (d) is independently developed by the other party. 
+4.3 Each party agrees not to disclose the other party’s Confidential Information to any third party other than as set forth in the following sentence for a period of five years from the date of the disclosing party’s disclosure of the Confidential Information to the receiving party; however, we will protect the confidentiality of Your Content residing in the Services for as long as such information resides in the Services. Each party may disclose Confidential Information only to those employees, agents or subcontractors who are required to protect it against unauthorized disclosure in a manner no less protective than required under this Agreement, and each party may disclose the other party’s Confidential Information in any legal proceeding or to a governmental entity as required by law.
+
+
+6.  WARRANTIES, DISCLAIMERS AND EXCLUSIVE REMEDIES 
+6.1 Each party represents that it has validly entered into this Agreement and that it has the power and authority to do so. We warrant that during the Services Period we will perform the Services using commercially reasonable care and skill in all material respects. If the Services provided to You were not performed as warranted, You must promptly provide us with a written notice that describes the deficiency in the Services (including, as applicable, the service request number notifying us of the deficiency in the Services). 
+6.2 WE DO NOT WARRANT THAT THE SERVICES WILL BE PERFORMED ERROR-FREE OR UNINTERRUPTED, THAT WE WILL CORRECT ALL SERVICES ERRORS, OR THAT THE SERVICES WILL MEET YOUR REQUIREMENTS OR EXPECTATIONS. WE ARE NOT RESPONSIBLE FOR ANY ISSUES RELATED TO THE PERFORMANCE, OPERATION OR SECURITY OF THE SERVICES THAT ARISE FROM YOUR CONTENT OR THIRD PARTY CONTENT OR SERVICES PROVIDED BY THIRD PARTIES. 
+6.3 FOR ANY BREACH OF THE SERVICES WARRANTY, YOUR EXCLUSIVE REMEDY AND OUR ENTIRE LIABILITY SHALL BE THE CORRECTION OF THE DEFICIENT SERVICES THAT CAUSED THE BREACH OF WARRANTY, OR, IF WE CANNOT SUBSTANTIALLY CORRECT THE DEFICIENCY IN A COMMERCIALLY REASONABLE MANNER, YOU MAY END THE DEFICIENT SERVICES AND WE WILL REFUND TO YOU THE FEES FOR THE TERMINATED SERVICES THAT YOU PRE-PAID TO US FOR THE PERIOD FOLLOWING THE EFFECTIVE DATE OF TERMINATION. 
+6.4 TO THE EXTENT NOT PROHIBITED BY LAW, THESE WARRANTIES ARE EXCLUSIVE AND THERE ARE NO OTHER EXPRESS OR IMPLIED WARRANTIES OR CONDITIONS INCLUDING FOR SOFTWARE, HARDWARE, SYSTEMS, NETWORKS OR ENVIRONMENTS OR FOR MERCHANTABILITY, SATISFACTORY QUALITY AND FITNESS FOR A PARTICULAR PURPOSE. 
+
+
+7. LIMITATION OF LIABILITY 
+7.1 IN NO EVENT WILL EITHER PARTY OR ITS AFFILIATES BE LIABLE FOR ANY INDIRECT OR CONSEQUENTIAL DAMAGES, OR ANY LOSS OF REVENUE, PROFITS (EXCLUDING FEES UNDER THIS AGREEMENT), SALES, DATA, DATA USE, GOODWILL, OR REPUTATION. 
+7.2 IN NO EVENT SHALL THE AGGREGATE LIABILITY OF QXIP AND OUR AFFILIATES ARISING OUT OF OR RELATED TO THIS AGREEMENT OR YOUR ORDER, WHETHER IN CONTRACT, TORT, OR OTHERWISE, EXCEED THE TOTAL AMOUNTS ACTUALLY PAID UNDER YOUR ORDER FOR THE SERVICES GIVING RISE TO THE LIABILITY DURING THE TWELVE (12) MONTHS IMMEDIATELY PRECEDING THE EVENT GIVING RISE TO SUCH LIABILITY. 
+
+
+8. INDEMNIFICATION 
+   1. Non-Infringement. QXIP represents and warrants that QXIP has the right to license the Software to Licensee as provided in this Agreement and that Licensee’s use of the Software and Documentation as licensed hereunder will not infringe upon or violate any copyright, patent, trademark or other intellectual property right of any third party, and will not violate any third party’s trade secret, contract or confidentiality rights.
+   2. In the event that Licensee is prevented from using the Software in connection with any claim that the Software as used within the scope of this Agreement infringes an intellectual  property right of any third party, QXIP shall, at QXIP's expense (i) replace the infringing or misappropriating portion of the Software with a functionally equivalent product or modify it so that it becomes non-infringing without materially compromising functionality, or if neither of the foregoing alternatives are commercially feasible, then (ii) terminate Licensee’s right to use the Software and reimburse Licensee for the licensing fees paid by Licensee for the Software during the last 12 (twelve) months. Notwithstanding the foregoing, QXIP has no obligation with respect to any claim of infringement that is based upon or arises out of: (1) any unauthorized modification to the Software not made by QXIP; (2) the unauthorized use or combination of the Software with any hardware or software not provided by QXIP; or (3) Licensee’s failure to stop using the infringing Software after written notice from QXIP.
+
+
+9. TERM AND TERMINATION 
+9.1 This Agreement is valid for the order which this Agreement accompanies. 
+9.2 Services shall be provided for the Services Period defined in Your order. 
+9.3 We may suspend Your or Your Users’ access to, or use of, the Services if we believe that (a) there is a significant threat to the functionality, security, integrity, or availability of the Services or any content, data, or applications in the Services; (b) You or Your Users are accessing or using the Services to commit an illegal act; or (c) there is a violation of the Acceptable Use terms. When reasonably practicable and lawfully permitted, we will provide You with advance notice of any such suspension. We will use reasonable efforts to re-establish the Services promptly after we determine that the issue causing the suspension has been resolved. During any suspension period, we will make Your Content (as it existed on the suspension date) available to You. Any suspension under this Section shall not excuse You from Your obligation to make payments under this Agreement.
+9.4 If either of us breaches a material term of this Agreement or any order and fails to correct the breach within 30 days of written specification of the breach, then the breaching party is in default and the non-breaching party may terminate (a) in the case of breach of any order, the order under which the breach occurred; or (b) in the case of breach of the Agreement, the Agreement and any orders that have been placed under the Agreement. If we terminate any orders as specified in the preceding sentence, You must pay within 30 days all amounts that have accrued prior to such termination, as well as all sums remaining unpaid for the Services under such order(s) plus related taxes and expenses. Except for nonpayment of fees, the nonbreaching party may agree in its sole discretion to extend the 30 day period for so long as the breaching party continues reasonable efforts to cure the breach. You agree that if You are in default under this Agreement, You may not use those Services ordered. 
+9.5 At the end of the Services Period, we will make Your Content (as it existed at the end of the Services Period) available for retrieval by You during a retrieval period set out in the order. At the end of such retrieval period, and except as may be required by law, we will delete or otherwise render unrecoverable any of Your Content that remains in the Services. 
+9.6 Provisions that survive termination or expiration of this Agreement are those relating to limitation of liability, indemnification, payment and others which by their nature are intended to survive. 
+
+
+10. THIRD-PARTY CONTENT, SERVICES AND WEBSITES 
+10.1 Cloud Services and Third Party Services. Without limitation of the disclaimers and limitations of liability set forth in Section 7, you acknowledge and agree as follows: (a) we provide the Service using cloud computing services of one or more third party cloud providers (collectively, the “Cloud Providers”); and (b) we shall not be responsible or liable to you for any act, omission or failure of any Cloud Provider. The Service may depend upon, interact with or enable access to third parties’ information, other content, services or websites (each, a “Third Party Service”), which may in each case be accompanied by separate terms of use. Use of each Third Party Service may require that you accept additional terms of use. You must comply with the applicable terms of use when using the Third Party Service and the Service. We do not endorse, and hereby disclaim all liability or responsibility to you or any other person for, any Third Party Services.
+
+
+10.1 The Services may enable You to link to, transfer Your Content or Third Party Content to, or otherwise access, third parties’ websites, platforms, content, products, services, and information (“Third Party Services”). QXIP does not control and is not responsible for Third Party Services. You are solely responsible for complying with the terms of access and use of Third Party Services, and if QXIP accesses or uses any Third Party Services on Your behalf to facilitate performance of the Services, You are solely responsible for ensuring that such access and use, including through passwords, credentials or tokens issued or otherwise made available to You, is authorized by the terms of access and use for such services. If You transfer or cause the transfer of Your Content or Third Party Content from the Services to a Third Party Service or other location, that transfer constitutes a distribution by You and not by QXIP. 
+10.2 Any Third Party Content we make accessible is provided on an “as-is” and “as available” basis without any warranty of any kind. You acknowledge and agree that we are not responsible for, and have no obligation to control, monitor, or correct, Third Party Content. We disclaim all liabilities arising from or related to Third Party Content. 
+10.2 You acknowledge that: (i) the nature, type, quality and availability of Third Party Content may change at any time during the Services Period, and (ii) features of the Services that interoperate with Third Party Services depend on the continuing availability of such third parties’ respective application programming interfaces (APIs). We may need to update, change or modify the Services under this Agreement as a result of a change in, or unavailability of, such Third Party Content, Third Party Services or APIs. If any third party ceases to make its Third Party Content or APIs available on reasonable terms for the Services, as determined by us in our sole discretion, we may cease providing access to the affected Third Party Content or Third Party Services without any liability to You. Any changes to Third Party Content, Third Party Services or APIs, including their unavailability, during the Services Period does not affect Your obligations under this Agreement or the applicable order, and You will not be entitled to any refund, credit or other compensation due to any such changes. 
+11. SERVICE MONITORING, ANALYSES AND QXIP SOFTWARE 
+11.1 We continuously monitor the Services to facilitate QXIP’s operation of the Services; to help resolve Your service requests; to detect and address threats to the functionality, security, integrity, and availability of the Services as well as any content, data, or applications in the Services; and to detect and address illegal acts or violations of the Acceptable Use Policy. QXIP monitoring tools do not collect, access or store any of Your Content residing in the Services, except as needed for such purposes. QXIP does not monitor, and does not address issues with, non-QXIP software provided by You or any of Your Users that is stored in, or run on or through, the Services. Information collected by QXIP monitoring tools (excluding Your Content) may also be used to assist in managing QXIP’s product and service portfolio, to help QXIP address deficiencies in its product and service offerings, and for license management purposes. 
+11.2 We may (i) compile statistical and other information related to the performance, operation and use of the Services, and (ii) use data from the Services in aggregated form for security and operations management, to create statistical analyses, and for research and development purposes (clauses i and ii are collectively referred to as “Service Analyses”). We retain all intellectual property rights in Service Analyses. 
+11.3 We may provide You with the ability to obtain certain QXIP Software (as defined below) for use with the Services. If we provide QXIP Software to You and do not specify separate terms for such software, then such QXIP Software is provided as part of the Services and You have the non-exclusive, worldwide, limited right to use such QXIP Software, subject to the terms of this Agreement and Your order (except for separately licensed elements of the QXIP Software, which separately licensed elements are governed by the applicable separate terms), solely to facilitate Your use of the Services. You may allow Your Users to use the QXIP Software for this purpose, and You are responsible for their compliance with the license terms. Your right to use any QXIP Software will terminate upon the earlier of our notice (by web posting or otherwise) or the end of the Services associated with the QXIP Software. Notwithstanding the foregoing, if QXIP Software is licensed to You under separate terms, then Your use of such software is governed by the separate terms. Your right to use any part of the QXIP Software that is licensed under the separate terms is not restricted in any way by this Agreement. 
+
+
+12. HIGH RISK ACTIVITIES 
+
+
+12.1 High Risk Activities. The Service is not fault-tolerant and is not designed, manufactured or intended for any kind of use with on-line control equipment in hazardous environments requiring fail-safe performance (such as in the operation of nuclear facilities, aircraft navigation or communication systems, air traffic control, direct life  support machines or weapon systems in which the failure of the Service could lead directly to death, personal injury or severe physical or environmental damage: all the so called "High Risk Activities"). Accordingly, QXIP specifically disclaims any express or implied warranty of fitness for High Risk Activities.
+
+
+13. FORCE MAJEURE 
+Neither You nor we shall be responsible for failure or delay of performance if caused by: an act of war, hostility, or sabotage; act of God; pandemic; electrical, internet, or telecommunication outage that is not caused by the obligated party; government restrictions (including the denial or cancelation of any export, import or other license); or other event outside the reasonable control of the obligated party. Both You and we will use reasonable efforts to mitigate the effect of a force majeure event. If such event continues for more than 30 days, either of You or we may cancel unperformed Services and affected orders upon written notice. This Section does not excuse either party’s obligation to take reasonable steps to follow its normal disaster recovery procedures or Your obligation to pay for the Services. 
+
+
+14. GOVERNING LAW AND JURISDICTION 
+This Agreement is governed by the laws of The Netherlands and each party agrees to submit to the exclusive jurisdiction of, and venue in, the courts in Amsterdam, The Netherlands in any dispute arising out of or relating to this Agreement. 
+
+
+15. NOTICE 
+15.1 Any notice required under this Agreement shall be provided to the other party in writing. If You have a legal dispute with us or if You wish to provide a notice under the Indemnification Section of this Agreement, or if You become subject to insolvency or other similar legal proceedings, You will promptly send written notice to: QXIP BV, Postbus 67077 1060JB Amsterdam. 
+15.2 We may give notices applicable to our Services customers by means of a general notice on the QXIP portal for the Services, and notices specific to You by electronic mail to Your e-mail address on record in our account information or by written communication sent by first class mail or pre-paid post to Your address on record in our account information. 
+16. ASSIGNMENT 
+You may not assign this Agreement or give or transfer the Services, or any interest in the Services, to another individual or entity. 
+
+
+17. OTHER 
+17.1 We are an independent contractor, and each party agrees that no partnership, joint venture, or agency relationship exists between the parties. 
+17.2 Our business partners and other third parties, including any third parties with which the Services have integrations or that are retained by You to provide consulting services, implementation services or applications that interact with the Services, are independent of QXIP and are not QXIP’s agents. We are not liable for, bound by, or responsible for any problems with the Services or Your Content arising due to any acts of any such business partner or third party, unless the business partner or third party is providing Services as our subcontractor on an engagement ordered under this Agreement and, if so, then only to the same extent as we would be responsible for our resources under this Agreement. 
+17.3 If any term of this Agreement is found to be invalid or unenforceable, the remaining provisions will remain effective and such term shall be replaced with another term consistent with the purpose and intent of this Agreement. 
+17.4 Except for actions for nonpayment or breach of QXIP’s proprietary rights, no action, regardless of form, arising out of or relating to this Agreement may be brought by either party more than two years after the cause of action has accrued. 
+17.5 Prior to entering into an order governed by this Agreement, You are solely responsible for determining whether the Services meet Your technical, business or regulatory requirements. QXIP will cooperate with Your efforts to determine whether use of the standard Services are consistent with those requirements. Additional fees may apply to any additional work performed by QXIP or changes to the Services. You remain solely responsible for Your regulatory compliance in connection with Your use of the Services.
+17.6 Upon forty-five (45) days written notice and no more than once every twelve (12) months, QXIP may audit Your use of the Cloud Services to ensure Your use of the Cloud Services is in compliance with the terms of the applicable order and this Agreement. Any such audit shall not unreasonably interfere with Your normal business operations. 
+You agree to cooperate with QXIP’s audit and to provide reasonable assistance and access to information reasonably requested by QXIP. 
+The performance of the audit and non-public data obtained during the audit (including findings or reports that result from the audit) shall be subject to the provisions of section 4 (Nondisclosure) of this Agreement.
+If the audit identifies non-compliance, You agree to remedy (which may include, without limitation, the payment of any fees for additional Cloud Services) such non-compliance within 30 days of written notification of that non- compliance. You agree that QXIP shall not be responsible for any of Your costs incurred in cooperating with the audit. 
+
+
+18.  ENTIRE AGREEMENT 
+18.1 You agree that this Agreement and the information which is incorporated into this Agreement by written reference (including reference to information contained in a URL or referenced policy), together with the applicable order, is the complete agreement for the Services ordered by You and supersedes all prior or contemporaneous agreements or representations, written or oral, regarding such Services. 
+18.2 It is expressly agreed that the terms of this Agreement and any QXIP order shall supersede the terms in any purchase order, procurement internet portal, or other similar non-QXIP document and no terms included in any such purchase order, portal, or other non-QXIP document shall apply to the Services ordered. In the event of any inconsistencies between the terms of an order and the Agreement, the order shall take precedence; however, unless expressly stated otherwise in an order, the terms of the Data Processing Agreement shall take precedence over any inconsistent terms in an order. This Agreement and orders hereunder may not be modified and the rights and restrictions may not be altered or waived except in a writing signed or accepted online by authorized representatives of You and of QXIP; however, QXIP may update the Service specifications, including by posting updated documents on QXIP’s websites. No third party beneficiary relationships are created by this Agreement. 
+
+
+19. AGREEMENT DEFINITIONS
+19.1 “QXIP Software” means any software agent, application or tool that QXIP makes available to You for download specifically for purposes of facilitating Your access to, operation of, and/or use with, the Services. 
+19.2 “Program Documentation” refers to the user manuals, help windows, readme files for the Services and any QXIP Software. You may access the documentation online at helpdesk.qxip.net or such other address specified by QXIP. 
+19.3 “Third Party Content” means all software, data, text, images, audio, video, photographs and other content and material, in any format, that are obtained or derived from third party sources outside of QXIP that You may access through, within, or in conjunction with Your use of, the Services. Third Party Content includes third-party sourced materials accessed or obtained by Your use of the Services or any QXIP-provided tools. 
+19.4 “Users” means, for Services, those employees, contractors, and end users, as applicable, authorized by You or on Your behalf to use the Services in accordance with this Agreement and Your order. For Services that are specifically designed to allow Your clients, agents, customers, suppliers or other third parties to access the Services to interact with You, such third parties will be considered “Users” subject to the terms of this Agreement and Your order. 
+19.5 “Your Content” means all software, data (including Personal Data), text, images, audio, video, photographs, non-QXIP or third party applications, and other content and material, in any format, provided by You or any of Your Users that is stored in, or run on or through, the Services. Services under this Agreement, QXIP Software, other QXIP products and services, and QXIP intellectual property, and all derivative works thereof, do not fall within the meaning of the term “Your Content.” Your Content includes any Third Party Content that is brought by You into the Services by Your use of the Services or any QXIP-provided tools. 
+
